Added throws to MeetingsClient doc